--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "esModuleInterop": true,
     "outDir": "dist",
     "target": "es6",
-    "module": "es6",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "lib": ["es2017"]
   },
