--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rm -rf dist",
     "build": "npm run clean && tsc && cp package.json README.md ./dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -14,12 +14,16 @@
   "devDependencies": {
     "@types/assert": "^1.5.6",
     "@types/debug": "^4.1.7",
+    "@types/jest": "^28.1.6",
     "@types/ramda": "^0.28.15",
+    "jest": "^28.1.3",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
   },
   "dependencies": {
     "assert": "^2.0.0",
     "debug": "^4.3.4",
+    "fp-ts": "^2.12.1",
     "ramda": "^0.28.0"
   }
 }
