--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
     "@types/debug": "^4.1.7",
     "@types/jest": "^28.1.6",
     "@types/ramda": "^0.28.15",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint": "^8.20.0",
+    "eslint-plugin-functional": "^4.2.1",
     "jest": "^28.1.3",
     "ts-jest": "^28.0.7",
+    "tsutils": "^3.21.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
