--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "assert": "^2.0.0",
     "debug": "^4.3.4",
     "fp-ts": "^2.12.1",
+    "fp-ts-contrib": "^0.1.29",
+    "fp-ts-std": "^0.14.2",
     "ramda": "^0.28.0"
   },
   "repository": {
