--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "target": "es6",
     "module": "CommonJS",
     "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
     "lib": ["es2017"]
   },
   "include": ["src"]
