--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "module": "CommonJS",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "lib": ["es2017"]
+    "lib": ["es2017"],
   },
-  "include": ["src"]
+  "include": ["src","bin"]
 }
