--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "fp-ts": "^2.12.1",
     "fp-ts-contrib": "^0.1.29",
     "fp-ts-std": "^0.14.2",
+    "glpk.js": "^4.0.1",
     "monocle-ts": "^2.3.13",
     "ramda": "^0.28.0"
   },
