--- a/package.json
+++ b/package.json
@@ -33,9 +33,13 @@
     "fp-ts": "^2.12.1",
     "fp-ts-contrib": "^0.1.29",
     "fp-ts-std": "^0.14.2",
+    "glpk-ts": "^0.0.9",
+    "glpk-wasm": "^0.1.3",
     "glpk.js": "^4.0.1",
     "monocle-ts": "^2.3.13",
-    "ramda": "^0.28.0"
+    "node-gyp": "^9.1.0",
+    "ramda": "^0.28.0",
+    "vectorious": "^6.1.4"
   },
   "repository": {
     "type": "git",
