--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mudont/rummy-core",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Typescript library for Indian Rummy Card game",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@mudont/js-milp-solver": "^0.4.24",
+    "@types/lodash": "^4.14.182",
     "assert": "^2.0.0",
     "debug": "^4.3.4",
     "deep-object-diff": "^1.1.7",
@@ -36,9 +37,11 @@
     "glpk-ts": "^0.0.9",
     "glpk-wasm": "^0.1.3",
     "glpk.js": "^4.0.1",
+    "lodash": "^4.17.21",
     "monocle-ts": "^2.3.13",
     "node-gyp": "^9.1.0",
     "ramda": "^0.28.0",
+    "typescript-memoize": "^1.1.0",
     "vectorious": "^6.1.4"
   },
   "repository": {
