--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,21 @@
 {
-  "compilerOptions": {
-    "strict": true,
-    "jsx": "react",
-    "declaration": true,
-    "esModuleInterop": true,
-    "outDir": "dist",
-    "target": "es6",
-    "module": "CommonJS",
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "lib": ["es2017"],
-  },
-  "include": ["src","bin"]
+    "compilerOptions": {
+        "strict": true,
+        "jsx": "react",
+        "declaration": true,
+        "esModuleInterop": true,
+        "outDir": "dist",
+        "target": "es2022",
+        "module": "CommonJS",
+        "moduleResolution": "node",
+        "allowSyntheticDefaultImports": true,
+        "lib": [
+            "es2022"
+        ],
+    },
+    "include": [
+        "src",
+        "bin",
+        "experiments",
+    ]
 }
